--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4EC56A294A94932E0861F2B6FA6DE3EC
 ProjectName=Virtual Reality BP Game Template
+Description=Hybrid Space
+ProjectVersion=0.0.0.1
+CompanyName=Small Studios
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
