--- a/HybridSpace.uproject
+++ b/HybridSpace.uproject
@@ -3,6 +3,13 @@
 	"EngineAssociation": "4.23",
 	"Category": "",
 	"Description": "",
+	"Plugins": [
+		{
+			"Name": "SteamVRInput",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/401605a650e64a8fa3c0f45838a6357d"
+		}
+	],
 	"TargetPlatforms": [
 		"PS4",
 		"WindowsNoEditor"
