Finished Oxygen System/ Optimized for VR (Yet to change to Fwd Rendering)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,7 +5,7 @@ Description=Hybrid Space
 ProjectVersion=0.0.0.1
 CompanyName=smallStudios
 CopyrightNotice=
-bStartInVR=True
+bStartInVR=False
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
