--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -76,6 +76,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="TeleportRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_FaceButton1)
 +ActionMappings=(ActionName="TeleportRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Thumbstick)
 +ActionMappings=(ActionName="TeleportRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SteamVR_Input_Temporary_Action_4)
++ActionMappings=(ActionName="AddMoreOxygen",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Trigger)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Trigger)
 +AxisMappings=(AxisName="CameraFOV",Scale=1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="CameraMoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="CameraMoveForward",Scale=1.000000,Key=W)
