--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -34,7 +34,7 @@ r.EyeAdaptionQuality=0
 r.SSR.MaxRoughness=0
 r.rhicmdbypass=0
 r.TiledReflectionEnvironmentMinimumCount=10
-r.ForwardShading=True
+r.ForwardShading=False
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAutoCreateNavigationData=True
@@ -116,4 +116,5 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
 
